; ModuleID = '/home/carl/AnghaBench/vlc/test/libvlc/extr_media_discoverer.c_ml_item_event.c'
source_filename = "/home/carl/AnghaBench/vlc/test/libvlc/extr_media_discoverer.c_ml_item_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.libvlc_event_t = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32, i32 }

@.str = private unnamed_addr constant [19 x i8] c"item %s(%d): '%s'\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.libvlc_event_t*, i8*)* @ml_item_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ml_item_event(%struct.libvlc_event_t* %0, i8* %1) #0 {
  %3 = alloca %struct.libvlc_event_t*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store %struct.libvlc_event_t* %0, %struct.libvlc_event_t** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.libvlc_event_t*, %struct.libvlc_event_t** %3, align 8
  %7 = getelementptr inbounds %struct.libvlc_event_t, %struct.libvlc_event_t* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call i8* @libvlc_media_get_mrl(i32 %10)
  store i8* %11, i8** %5, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = call i32 @assert(i8* %12)
  %14 = load i8*, i8** %4, align 8
  %15 = load %struct.libvlc_event_t*, %struct.libvlc_event_t** %3, align 8
  %16 = getelementptr inbounds %struct.libvlc_event_t, %struct.libvlc_event_t* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i8*, i8** %5, align 8
  %21 = call i32 @test_log(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i8* %14, i32 %19, i8* %20)
  %22 = load i8*, i8** %5, align 8
  %23 = call i32 @free(i8* %22)
  ret void
}

declare dso_local i8* @libvlc_media_get_mrl(i32) #1

declare dso_local i32 @assert(i8*) #1

declare dso_local i32 @test_log(i8*, i8*, i32, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
